--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -72,7 +72,7 @@ last to be written
 %
 \section{Introduction}
 
-Paper hypothesis:
+Paper hypothesxxxxis:
 Hypothesis: (activists are both interesting and identifiable)
 The interesting users are those with a (recent) history of (recurring) social engagement
 
