--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -42,17 +42,66 @@ last to be written
 %
 \section{Introduction}
 
-\anote{Paper research hypothesis:  (1) the notion of "online activist" is useful in several contexts. 
-for instance we may look for individuals who are not influencer in the traditional sense described in the literature \textbf{[CITE]}, i.e., they are not famous and do not have many followers.
-However, these individuals are interesting because...
 
-(2)  Such activist  profiles are interesting  in a pragmatic sense. They are defined, informally, as individuals who have a (recent) history of (recurring) social engagement that is manifested in their online behaviour.}
+\anote{Who are ``online activists'' and why is it interesting to identify them?}
+According to the Cambridge Dictionary, an \textit{activist} is  ``A person who believes strongly in political or social change and takes part in activities such as public protests to try to make this happen''.
+In contrast, the Dictionary defines an influencer as ``Someone who affects or changes the way that other people behave, for example through their use of social media''.
+%
+While a large of body of research has been generated over the past ten years on techniques for finding influencers online \cite{INFLUENCERS}, the problem of identifying activists has received less attention. 
+While online activism is a well-known phenomenon \cite{ARAB SPRING papers}, research has been limited to the study of its broad societal impact. 
+In contrast, we are interest in the fine-grained discovery of activists at the level of the single individual, in other words, we seek to identify people who feel passionate about a cause or topic, and who take action for it.
+\anote{activism in social movement literature:  \cite{doi:10.1080/14742830701497277}} 
 
-\anote{Activists are related to, but different from that of \textit{influencers} in a social network \cite{INFLUENCERS}.}
+\anote{citation for INFLUENCERS:
 
-\anote{Candidate discovery is based on a weak notion of online event. It is weak because on Twitter events are not explicitly defined, unlike for example in Facebook or Meetup.}
+F. Riquelme, P. González-Cantergiani: “Measuring user influence on Twitter: A survey” (2016)
+}
 
-\anote{We achieve two things:
+\anote{Motivation -- we may need to play this down if the choice of case study is conferences or something not related to the project \\
+
+Our motivation for seeking individual activists comes from our ongoing work on...
+
+\anote{see this list below}
+\begin{itemize}
+
+\item Mosquito-borne diseases such as Zika, Dengue and Chikungunya are endemic in several countries and Brazil is one of the most affected ones.
+\item These diseases cause severe symptomatic effects and complications which include hemorrhagic fever and microcephaly in newborns of contaminated mothers.
+\item Why they are difficult to fight: No vaccines available, Government is ineffective, slow and has low resources
+\end{itemize}
+}
+
+Our long-term goal is to help alleviate these problems by supporting the health officials in their efforts to detect and clean up mosquito breeding sites.
+Thus, in a practical sense our study is on techniques for identifying those individuals who are likely to become engaged with volunteering efforts.
+Note that we are not seeking people who have shown  specific interest in the fight against Zika or other epidemics, but rather, more generally, we are looking for people who have a recent and sustained history of social engagement. 
+%
+Thus, our operational definition of activists is related to, but different from, that of \textit{influencers} in a social network. 
+For example, influencers are typically people who are well-known either online or in the real world, and who acts as hubs and amplifiers for messages associated with specific topics. 
+In contrast, activists are, by our own definition, not famous people, rather they are distinguished by their active attitude towards social engagement, either with a special focus on specific issues, or broadly across a range of issues.
+
+\anote{Activists presence in social media is widely acknowledged. Social media facilitates activists communication and organization [5].  Some examples on how social media enable activism are:
+	Cause and topic awareness;	Social gathering and activities organization;
+	Organize help efforts and diffusion of information during disasters.\\
+	
+	Social media empowers activists by [6]:
+ Easing public acting in coordination for disaffected citizens; 	Creating information cascades that bolstered protesters' perceptions of the likelihood of success;
+	Increasing publicity diffusion of information to regional and global public\\
+
+
+create ref for [5] : T. Poell: “Social media and the transformation of activist communication: exploring the social media ecology of the 2010 Toronto G20 protests” (2014)  \\
+create ref for [6] : W. L. Youmans, J. C. York: “Social Media and the Activist Toolkit: User Agreements, Corporate Interests, and the Information Infrastructure of Modern Social Movements” (2012)
+
+}
+
+We make two main research hypotheses:
+firstly, that the systematic collection and analysis of online Twitter content enables the automated, fine-grained detection of socially active individuals;
+secondly, that the set of those individuals are distinguished from influencers found using the same Twitter content.
+
+\anote{mention limitations of our past efforts. cite past papers as follows: \cite{Missier2017,Sousa2018,Barros2018}
+}
+
+\anote{Candidate discovery is based on a weak notion of online event. It is \textit{weak} because on Twitter events are not explicitly defined, unlike for example in Facebook or Meetup.}
+
+\anote{Our technique achieves two things:
 
 \begin{itemize}
 \item discover candidate Twitter profiles
@@ -60,51 +109,120 @@ However, these individuals are interesting because...
 \end{itemize}	
 }
 
-\anote{when we say ``social media'' in this paper we refer exclusively to Twitter. So I guess just as well say Twitter explicitly everywhere? }
-
+\anote{clarify that when we say ``social media'' in this paper we refer exclusively to Twitter. So I guess just as well say Twitter explicitly everywhere? }
 
 \subsection{Paper contributions}
-
 
 The paper offers the following original contributions:
 
 \begin{itemize}
-\item a domain-agnostic operational definition on ``online activist'' that is grounded in a set of measurable metrics that define the \textit{strength} of a user profile;
+\item a domain-agnostic operational definition of ``online activist'' that is grounded in a set of measurable metrics that define the \textit{strength} of a user profile;
 
 \item a computational method for the semi-automatic discovery of candidate activists from the Twitter stream by extracting sequences of weak events, for measuring the strength of the candidate profiles, and repeatedly updating them over time;
 
 \item A reference implementation of the Twitter stream processing workflow, grounded in standard community detection algorithms, to generate a activist profile database;
 
-\item A functional evaluation to show the approach in action on a reference case study, demonstrating how activist profiles can be grown over time;
+\item A functional evaluation to show the approach in action on a reference case study, demonstrating how activist profiles can be grown over time, and how those are different from \textit{influencers} found by well-known algorithms within the same virtual communities;
 
 \item A performance evaluation to assess the impact of the Twitter API limitations on content retrieval, specifically sampling from the ``garden hose'' 
 
 \end{itemize}
 
+\subsection{Reference case study and running example}
+
+\anote{conferences? if so then here only say why these are relevant to support the experimental part of our research, but no need to go into detail of events bootstrapping etc.
+
+\begin{itemize}
+\item Right size.
+\item  Understand domain.
+\item  Hopefully repeat users
+\item  Relatively easy to bootstrap 
+\item  Understood to be just a “lab dataset"
+\end{itemize}
+}
 
 \subsection{Related Work}
 
+\anote{(1) generically on finding influencers. 
+	  (2) on using social media to fight Zika specifically
+  }
 
-\section{Approach}
+
+%%%%%%%%%%%%%%%%%%%%%
+\section{Technical Approach}
+%%%%%%%%%%%%%%%%%%%%%
 
 As mentioned in the introduction, the main limitation of our own previous approach was that topology-based metrics such as h-index and centrality analysis could not be used, because the users identified through the content relevance approach led to collections of disconnected users. Essentially, each user would be considered releant in isolation, but on the basis of a very sparse signal.
 	
 	In contrast, in our current approach users are discovered within a context in which, by definition,  they engage in meaningful conversations that provide a limited but strong signal about their interest in a certain topic.
 	
-	 \anote{
-	 	\begin{itemize}
-\item 	 	 Weak events provide the necessary context. 
-\item Observing users in context has the effect of drastically reducing the noise of general Twitter signal, relative to the general stream.  
-\item Conversations that take place within the context of an event are represented as dynamic weighted social network graphs. 
-\item Depending on the size and importance of the event, these networks may be first partitioned into smaller virtual overlapping communities, using the Daemon community detection algorithm
-\item users within each community (for small communities, we use the entire network) are then ranked according to their topolgical properties
-\item for the top-\textit{k} users within each community, we compute activism metrics and derive a strength of their profile.
-\item Progressively build up stronger profiles of repeat users, by updating their strength using the new values for the metrics
-	 	\end{itemize}
-	 }
-	 
+	\anote{
+		\begin{itemize}
+			\item 	 	 Weak events provide the necessary context. 
+			\item Observing users in context has the effect of drastically reducing the noise of general Twitter signal, relative to the general stream.  
+			\item Conversations that take place within the context of an event are represented as dynamic weighted social network graphs. 
+			\item Depending on the size and importance of the event, these networks may be first partitioned into smaller virtual overlapping communities, using the Daemon community detection algorithm
+			\item users within each community (for small communities, we use the entire network) are then ranked according to their topolgical properties
+			\item for the top-\textit{k} users within each community, we compute activism metrics and derive a strength of their profile.
+			\item Progressively build up stronger profiles of repeat users, by updating their strength using the new values for the metrics
+		\end{itemize}
+	}
+	
+	
+	
+ \subsection{Context: Weak online events}
+ 
 
-% \bibliographystyle{splncs04}
-% \bibliography{mybibliography}
+\subsection{Online activists: a broad operational definition}
+	
+	\anote{see ``Characterising activists'' in the presentation}
+	
+	
+\subsection{Events-content-users analysis }
+
+\anote{see ``Finding activists'' and the pipeline description in the presentation. includes all technical detail for:
+
+\begin{itemize}
+   \item harvesting from events
+   \item community detection. 
+   \item user ranking
+   \item profiling top-k users into a DB
+   \end{itemize}
+} 
+
+Illustrate each part using our running example.
+
+
+\subsection{Prototype architecture}	 
+
+	\anote{see ``Pipeline architecture'' in the presentation}
+	
+	
+\section{Experimental evaluation}
+
+\anote{here we note that functional evaluation was partially carried out in the previous section, while illustrating the pipeline. 
+	What we add here: 
+
+\begin{itemize}
+  \item comparing users found with influencers on the same case study dataset
+  \item comparing different approaches to community detection and user ranking
+\end{itemize}
+
+performance: discuss limitations of using the garden hose for content harvesting  (here or in next section??)\\
+
+
+do we need more than one case study?  My take is that one is good enough for a conference paper --- to be extended later
+
+}
+	
+	
+\section{Discussion and ongoing work}
+
+\anote{
+	we say that events are manually identified. Sketch the events bootstrapping idea.
+}
+
+ \bibliographystyle{splncs04}
+ \bibliography{icwe19}
 
 \end{document}
