added a few refs

--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -47,15 +47,12 @@ last to be written
 According to the Cambridge Dictionary, an \textit{activist} is  ``A person who believes strongly in political or social change and takes part in activities such as public protests to try to make this happen''.
 In contrast, the Dictionary defines an influencer as ``Someone who affects or changes the way that other people behave, for example through their use of social media''.
 %
-While a large of body of research has been generated over the past ten years on techniques for finding influencers online \cite{INFLUENCERS}, the problem of identifying activists has received less attention. 
-While online activism is a well-known phenomenon \cite{ARAB SPRING papers}, research has been limited to the study of its broad societal impact. 
+While a large of body of research has been generated over the past ten years on techniques for finding influencers online \cite{RIQUELME2016949}, the problem of identifying activists has received less attention. 
+While online activism is a well-known phenomenon \cite{IJoC1246}, research has been limited to the study of its broad societal impact. 
 In contrast, we are interest in the fine-grained discovery of activists at the level of the single individual, in other words, we seek to identify people who feel passionate about a cause or topic, and who take action for it.
 \anote{activism in social movement literature:  \cite{doi:10.1080/14742830701497277}} 
 
-\anote{citation for INFLUENCERS:
 
-F. Riquelme, P. González-Cantergiani: “Measuring user influence on Twitter: A survey” (2016)
-}
 
 \anote{Motivation -- we may need to play this down if the choice of case study is conferences or something not related to the project \\
 
