--- a/icwe19.bib
+++ b/icwe19.bib
@@ -1,3 +1,28 @@
+@article{IJoC1246,
+	author = {Gilad Lotan and Erhardt Graeff and Mike Ananny and Devin Gaffney and Ian Pearce and danah boyd},
+	title = {The Arab Spring| The Revolutions Were Tweeted: Information Flows during the 2011 Tunisian and Egyptian Revolutions},
+	journal = {International Journal of Communication},
+	volume = {5},
+	number = {0},
+	year = {2011},
+	keywords = {},
+    issn = {1932-8036},	url = {https://ijoc.org/index.php/ijoc/article/view/1246}
+}
+
+@article{RIQUELME2016949,
+title = "Measuring user influence on Twitter: A survey",
+journal = "Information Processing and Management",
+volume = "52",
+number = "5",
+pages = "949 - 975",
+year = "2016",
+issn = "0306-4573",
+doi = "https://doi.org/10.1016/j.ipm.2016.04.003",
+url = "http://www.sciencedirect.com/science/article/pii/S0306457316300589",
+author = "Fabian Riquelme and Pablo Gonzalez-Cantergiani",
+keywords = "Twitter, User influence, Opinion leader, Centrality measure, PageRank"
+}
+
 @inproceedings{Barros2018,
 author = {Barros, H. Pedro and Lima, Bruno G. C. and Crispim, Felipe C. and Vieira, Tiago and Missier, Paolo and Fonseca, Baldoino},
 booktitle = {Procs. 15th International Conference on Image Analysis and Recognition (ICIAR'18)},
@@ -21,16 +46,17 @@ year = {2018}
 	year = {2017}
 }
 
-
 @article{Sousa2018,
-	doi = {10.1016/j.is.2018.02.003},
-	issn = {03064379},
-	journal = {Information Systems},
-	keywords = {Dengue,Mosquito,Social media,Surveillance,Tweets},
-	title = {{VazaDengue: An information system for preventing and combating mosquito-borne diseases with social networks}},
-	volume = {75},
-	year = {2018}
-}
+title = "VazaDengue: An information system for preventing and combating mosquito-borne diseases with social networks",
+journal = "Information Systems",
+volume = "75",
+pages = "26 - 42",
+year = "2018",
+issn = "0306-4379",
+doi = "10.1016/j.is.2018.02.003",
+url = "http://www.sciencedirect.com/science/article/pii/S030643791730618X",
+author = "Leonardo Sousa and Rafael de Mello and Diego Cedrim and Alessandro Garcia and Paolo Missier and Anderson Uchoa and Anderson Oliveira and Alexander Romanovsky"}
+
 
 @article{doi:10.1080/14742830701497277,
 	author = { Chris   Bobel },
