added references in the presentation to bibtex file, fixed doi link for RIQUELME2016949, indentation of bibtex file

--- a/icwe19.bib
+++ b/icwe19.bib
@@ -1,80 +1,181 @@
-@article{IJoC1246,
-	author = {Gilad Lotan and Erhardt Graeff and Mike Ananny and Devin Gaffney and Ian Pearce and danah boyd},
-	title = {The Arab Spring| The Revolutions Were Tweeted: Information Flows during the 2011 Tunisian and Egyptian Revolutions},
-	journal = {International Journal of Communication},
-	volume = {5},
-	number = {0},
-	year = {2011},
-	keywords = {},
-    issn = {1932-8036},	url = {https://ijoc.org/index.php/ijoc/article/view/1246}
+@ARTICLE {IJoC1246,
+    author  = "Gilad Lotan and Erhardt Graeff and Mike Ananny and Devin Gaffney and Ian Pearce and danah boyd",
+    title   = "The Arab Spring| The Revolutions Were Tweeted: Information Flows during the 2011 Tunisian and Egyptian Revolutions",
+    journal = "International Journal of Communication",
+    year    = "2011",
+    volume  = "5",
+    number  = "0",
+    issn    = "1932-8036",
+    url     = "https://ijoc.org/index.php/ijoc/article/view/1246"
 }
-
-@article{RIQUELME2016949,
-title = "Measuring user influence on Twitter: A survey",
-journal = "Information Processing and Management",
-volume = "52",
-number = "5",
-pages = "949 - 975",
-year = "2016",
-issn = "0306-4573",
-doi = "https://doi.org/10.1016/j.ipm.2016.04.003",
-url = "http://www.sciencedirect.com/science/article/pii/S0306457316300589",
-author = "Fabian Riquelme and Pablo Gonzalez-Cantergiani",
-keywords = "Twitter, User influence, Opinion leader, Centrality measure, PageRank"
+@ARTICLE {RIQUELME2016949,
+    author   = "Fabian Riquelme and Pablo Gonzalez-Cantergiani",
+    title    = "Measuring user influence on Twitter: A survey",
+    journal  = "Information Processing and Management",
+    year     = "2016",
+    volume   = "52",
+    number   = "5",
+    pages    = "949 - 975",
+    issn     = "0306-4573",
+    doi      = "10.1016/j.ipm.2016.04.003",
+    url      = "http://www.sciencedirect.com/science/article/pii/S0306457316300589",
+    keywords = "Twitter, User influence, Opinion leader, Centrality measure, PageRank"
 }
-
-@inproceedings{Barros2018,
-author = {Barros, H. Pedro and Lima, Bruno G. C. and Crispim, Felipe C. and Vieira, Tiago and Missier, Paolo and Fonseca, Baldoino},
-booktitle = {Procs. 15th International Conference on Image Analysis and Recognition (ICIAR'18)},
-keywords = {{\#}zika},
-mendeley-tags = {{\#}zika},
-title = {{Analyzing Social Network Images with Deep Learning Models to Fight Zika Virus}},
-year = {2018}
+@INPROCEEDINGS {Barros2018,
+    author        = "Barros, H. Pedro and Lima, Bruno G. C. and Crispim, Felipe C. and Vieira, Tiago and Missier, Paolo and Fonseca, Baldoino",
+    title         = "{Analyzing Social Network Images with Deep Learning Models to Fight Zika Virus}",
+    booktitle     = "Procs. 15th International Conference on Image Analysis and Recognition (ICIAR'18)",
+    year          = "2018",
+    keywords      = "{\#}zika",
+    mendeley-tags = "{\#}zika"
 }
-
-
-@inproceedings{Missier2017,
-	address = {Roma, Italy},
-	author = {Missier, Paolo and McClean, Callum and Carlton, Jonathan and Cedrim, Diego and Silva, Leonardo and Garcia, Alessandro and Plastino, Alexandre and Romanovsky, Alexander},
-	booktitle = {Web Engineering: 17th International Conference, ICWE 2017, Rome, Italy, June 5-8, 2017, Proceedings},
-	editor = {Cabot, Jordi and {De Virgilio}, Roberto and Torlone, Riccardo},
-	file = {:Users/npm65/Library/Application Support/Mendeley Desktop/Downloaded/Missier et al. - 2017 - Recruiting from the Network Discovering Twitter Users Who Can Help Combat Zika Epidemics(2).pdf:pdf},
-	isbn = {978-3-319-60131-1},
-	pages = {437--445},
-	publisher = {Springer International Publishing},
-	title = {{Recruiting from the Network: Discovering Twitter Users Who Can Help Combat Zika Epidemics}},
-	year = {2017}
+@INPROCEEDINGS {Missier2017,
+    author    = "Missier, Paolo and McClean, Callum and Carlton, Jonathan and Cedrim, Diego and Silva, Leonardo and Garcia, Alessandro and Plastino, Alexandre and Romanovsky, Alexander",
+    title     = "{Recruiting from the Network: Discovering Twitter Users Who Can Help Combat Zika Epidemics}",
+    booktitle = "Web Engineering: 17th International Conference, ICWE 2017, Rome, Italy, June 5-8, 2017, Proceedings",
+    year      = "2017",
+    editor    = "Cabot, Jordi and {De Virgilio}, Roberto and Torlone, Riccardo",
+    pages     = "437--445",
+    address   = "Roma, Italy",
+    publisher = "Springer International Publishing",
+    file      = ":Users/npm65/Library/Application Support/Mendeley Desktop/Downloaded/Missier et al. - 2017 - Recruiting from the Network Discovering Twitter Users Who Can Help Combat Zika Epidemics(2).pdf:pdf",
+    isbn      = "978-3-319-60131-1"
 }
-
-@article{Sousa2018,
-title = "VazaDengue: An information system for preventing and combating mosquito-borne diseases with social networks",
-journal = "Information Systems",
-volume = "75",
-pages = "26 - 42",
-year = "2018",
-issn = "0306-4379",
-doi = "10.1016/j.is.2018.02.003",
-url = "http://www.sciencedirect.com/science/article/pii/S030643791730618X",
-author = "Leonardo Sousa and Rafael de Mello and Diego Cedrim and Alessandro Garcia and Paolo Missier and Anderson Uchoa and Anderson Oliveira and Alexander Romanovsky"}
-
-
-@article{doi:10.1080/14742830701497277,
-	author = { Chris   Bobel },
-	title = {âI'm not an activist, though I've done a lot of itâ: Doing Activism, Being Activist and the âPerfect Standardâ in a Contemporary Movement},
-	journal = {Social Movement Studies},
-	volume = {6},
-	number = {2},
-	pages = {147-159},
-	year  = {2007},
-	publisher = {Routledge},
-	doi = {10.1080/14742830701497277},
-	
-	URL = { 
-	https://doi.org/10.1080/14742830701497277
-	
-	},
-	eprint = { 
-	https://doi.org/10.1080/14742830701497277
-	}	
+@ARTICLE {Sousa2018,
+    author  = "Leonardo Sousa and Rafael de Mello and Diego Cedrim and Alessandro Garcia and Paolo Missier and Anderson Uchoa and Anderson Oliveira and Alexander Romanovsky",
+    title   = "VazaDengue: An information system for preventing and combating mosquito-borne diseases with social networks",
+    journal = "Information Systems",
+    year    = "2018",
+    volume  = "75",
+    pages   = "26 - 42",
+    issn    = "0306-4379",
+    doi     = "10.1016/j.is.2018.02.003",
+    url     = "http://www.sciencedirect.com/science/article/pii/S030643791730618X"
 }
-
+@ARTICLE {doi:10.1080/14742830701497277,
+    author    = "Chris   Bobel ",
+    title     = "``I'm not an activist, though I've done a lot of it'': Doing Activism, Being Activist and the ``Perfect Standard'' in a Contemporary Movement",
+    journal   = "Social Movement Studies",
+    year      = "2007",
+    volume    = "6",
+    number    = "2",
+    pages     = "147-159",
+    publisher = "Routledge",
+    doi       = "10.1080/14742830701497277",
+    url       = "https://doi.org/10.1080/14742830701497277		",
+    eprint    = "https://doi.org/10.1080/14742830701497277	"
+}
+@ARTICLE {Martin2007,
+    author  = "Roger L Martin and Sally Osberg ",
+    title   = "Social Entrepreneurship: The Case for Definition",
+    journal = "Stanford Social Innovation Review",
+    year    = "2007",
+    volume  = "5",
+    month   = "01",
+    url     = "https://www.researchgate.net/publication/253411658_Social_Entrepreneurship_The_Case_for_Definition	"
+}
+@ARTICLE {doi:10.1080/1369118X.2013.812674,
+    author    = "Thomas Poell ",
+    title     = "Social media and the transformation of activist communication: exploring the social media ecology of the 2010 Toronto G20 protests",
+    journal   = "Information, Communication \\& Society",
+    year      = "2014",
+    volume    = "17",
+    number    = "6",
+    pages     = "716-731",
+    publisher = "Routledge",
+    doi       = "10.1080/1369118X.2013.812674",
+    url       = "https://doi.org/10.1080/1369118X.2013.812674",
+    eprint    = "https://doi.org/10.1080/1369118X.2013.812674"
+}
+@ARTICLE {doi:10.1111/j.1460-2466.2012.01636.x,
+    author  = "Youmans, William Lafi and York, Jillian C.",
+    title   = "Social Media and the Activist Toolkit: User Agreements, Corporate Interests, and the Information Infrastructure of Modern Social Movements",
+    journal = "Journal of Communication",
+    year    = "2012",
+    volume  = "62",
+    number  = "2",
+    pages   = "315-329",
+    doi     = "10.1111/j.1460-2466.2012.01636.x",
+    url     = "http://dx.doi.org/10.1111/j.1460-2466.2012.01636.x",
+    eprint  = "/oup/backfile/content_public/journal/joc/62/2/10.1111_j.1460-2466.2012.01636.x/3/jjnlcom0315.pdf"
+}
+@ARTICLE {BIZID2018173,
+    author   = "Imen Bizid and Nibal Nayef and Patrice Boursier and Antoine Doucet",
+    title    = "Detecting prominent microblog users over crisis events phases",
+    journal  = "Information Systems",
+    year     = "2018",
+    volume   = "78",
+    pages    = "173 - 188",
+    issn     = "0306-4379",
+    doi      = "https://doi.org/10.1016/j.is.2017.12.004",
+    url      = "http://www.sciencedirect.com/science/article/pii/S0306437917302260",
+    keywords = "Information retrieval from microblogs, Prominent users prediction, User behavior modeling, Phase-temporal representation"
+}
+@INPROCEEDINGS {Coscia:2012:DLD:2339530.2339630,
+    author    = "Coscia, Michele and Rossetti, Giulio and Giannotti, Fosca and Pedreschi, Dino",
+    title     = "DEMON: A Local-first Discovery Method for Overlapping Communities",
+    booktitle = "Proceedings of the 18th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining",
+    year      = "2012",
+    series    = "KDD '12",
+    pages     = "615--623",
+    address   = "New York, NY, USA",
+    publisher = "ACM",
+    isbn      = "978-1-4503-1462-6",
+    location  = "Beijing, China",
+    numpages  = "9",
+    url       = "http://doi.acm.org/10.1145/2339530.2339630",
+    doi       = "10.1145/2339530.2339630",
+    acmid     = "2339630",
+    keywords  = "community discovery, complex networks, data mining"
+}
+@ARTICLE {Rosvall1118,
+    author    = "Rosvall, Martin and Bergstrom, Carl T.",
+    title     = "Maps of random walks on complex networks reveal community structure",
+    journal   = "Proceedings of the National Academy of Sciences",
+    year      = "2008",
+    volume    = "105",
+    number    = "4",
+    pages     = "1118--1123",
+    doi       = "10.1073/pnas.0706851105",
+    publisher = "National Academy of Sciences",
+    issn      = "0027-8424",
+    url       = "http://www.pnas.org/content/105/4/1118",
+    eprint    = "http://www.pnas.org/content/105/4/1118.full.pdf"
+}
+@ARTICLE {PhysRevE.70.066111,
+    author    = "Clauset, Aaron and Newman, M. E. J. and Moore, Cristopher",
+    title     = "Finding community structure in very large networks",
+    journal   = "Phys. Rev. E",
+    year      = "2004",
+    volume    = "70",
+    pages     = "066111",
+    month     = "Dec",
+    issue     = "6",
+    numpages  = "6",
+    publisher = "American Physical Society",
+    doi       = "10.1103/PhysRevE.70.066111",
+    url       = "https://link.aps.org/doi/10.1103/PhysRevE.70.066111"
+}
+@ARTICLE {FM4366,
+    author  = "Kalev Leetaru and Shaowen Wang and Guofeng Cao and Anand Padmanabhan and Eric Shook",
+    title   = "Mapping the global Twitter heartbeat: The geography of Twitter",
+    journal = "First Monday",
+    year    = "2013",
+    volume  = "18",
+    number  = "5",
+    issn    = "13960466",
+    doi     = "10.5210/fm.v18i5.4366",
+    url     = "https://journals.uic.edu/ojs/index.php/fm/article/view/4366"
+}
+@ARTICLE {LU2016,
+    author  = "L{\\"u}, Linyuan and Zhou, Tao and Zhang, Qian-Ming and Stanley, H. Eugene",
+    title   = "The H-index of a network node and its relation to degree and coreness",
+    journal = "Nature Communications",
+    year    = "2016",
+    volume  = "7",
+    pages   = "10168",
+    month   = "Jan",
+    day     = "12",
+    url     = "https://doi.org/10.1038/ncomms10168",
+    doi     = "10.1038/ncomms10168"
+}
