--- a/icwe19.bib
+++ b/icwe19.bib
@@ -1,4 +1,36 @@
-@ARTICLE {IJoC1246,
+@inproceedings{Bizid:2015,
+address = {New York, NY, USA},
+author = {Bizid, Imen and Nayef, Nibal and Boursier, Patrice and Faiz, Sami and Morcos, Jacques},
+booktitle = {Proceedings of the 2015 IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining 2015},
+doi = {10.1145/2808797.2809411},
+file = {:Users/npm65/Documents/myGRID/refs/p500{\_}bizid.pdf:pdf},
+isbn = {978-1-4503-3854-7},
+keywords = {Events in Twitter,Key user identification,On- and off-topic features,Real-time feature computation,SVM Classification and Ranking},
+pages = {500--503},
+publisher = {ACM},
+series = {ASONAM '15},
+title = {{Prominent Users Detection During Specific Events by Learning On- and Off-topic Features of User Activities}},
+url = {http://doi.acm.org/10.1145/2808797.2809411},
+year = {2015}
+}
+
+@article{Poell2014,
+annote = {doi: 10.1080/1369118X.2013.812674},
+author = {Poell, Thomas},
+doi = {10.1080/1369118X.2013.812674},
+issn = {1369-118X},
+journal = {Information, Communication {\&} Society},
+month = {jul},
+number = {6},
+pages = {716--731},
+publisher = {Routledge},
+title = {{Social media and the transformation of activist communication: exploring the social media ecology of the 2010 Toronto G20 protests}},
+url = {https://doi.org/10.1080/1369118X.2013.812674},
+volume = {17},
+year = {2014}
+}
+
+@ARTICLE {Lotan2011,
     author  = "Gilad Lotan and Erhardt Graeff and Mike Ananny and Devin Gaffney and Ian Pearce and danah boyd",
     title   = "The Arab Spring| The Revolutions Were Tweeted: Information Flows during the 2011 Tunisian and Egyptian Revolutions",
     journal = "International Journal of Communication",
@@ -87,7 +119,7 @@
     url       = "https://doi.org/10.1080/1369118X.2013.812674",
     eprint    = "https://doi.org/10.1080/1369118X.2013.812674"
 }
-@ARTICLE {doi:10.1111/j.1460-2466.2012.01636.x,
+@ARTICLE {Youmans2012,
     author  = "Youmans, William Lafi and York, Jillian C.",
     title   = "Social Media and the Activist Toolkit: User Agreements, Corporate Interests, and the Information Infrastructure of Modern Social Movements",
     journal = "Journal of Communication",
